WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291722
[iOS] REGRESSION (
293308@main
): CapCut - Video Editor crashes on launch
https://bugs.webkit.org/show_bug.cgi?id=291722
Summary
[iOS] REGRESSION (293308@main): CapCut - Video Editor crashes on launch
Wenson Hsieh
Reported
2025-04-17 16:07:29 PDT
rdar://149509713
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-04-17 16:11:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44235
EWS
Comment 2
2025-04-17 19:15:38 PDT
Committed
293838@main
(d31135e02600): <
https://commits.webkit.org/293838@main
> Reviewed commits have been landed. Closing PR #44235 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug