[iOS] REGRESSION (293308@main): CapCut - Video Editor crashes on launch https://bugs.webkit.org/show_bug.cgi?id=291722 rdar://149509713

Reviewed by Abrar Rahman Protyasha.

As it turns out, there's at least a third app that crashes on launch due to the removal of the
`-browsingContextController` method from WebKit. Instead of adding more bundle IDs to the list,
let's just remove the bundle restriction altogether, since there's likely to be more apps that are
affected.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.mm:
(WTF::IOSApplication::isChinaConstructionBank): Deleted.
(WTF::IOSApplication::isKanbawzaBank): Deleted.
* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(addBrowsingContextControllerMethodStubIfNeeded):

Canonical link: https://commits.webkit.org/293838@main