Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h
@@ -232,8 +232,6 @@ WTF_EXPORT_PRIVATE bool isUNIQLOApp();
 WTF_EXPORT_PRIVATE bool isWechat();
 WTF_EXPORT_PRIVATE bool isDOFUSTouch();
 WTF_EXPORT_PRIVATE bool isMyRideK12();
-WTF_EXPORT_PRIVATE bool isChinaConstructionBank();
-WTF_EXPORT_PRIVATE bool isKanbawzaBank();
 
 } // IOSApplication
 
